--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
 			<version>2.2.224</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+			<version>3.3.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
