--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 /src/main/resources/**.properties
-
+application.log
 ### STS ###
 .apt_generated
 .classpath
